compiler/typ/tests/fixtures/diagnostics/0841_polyvar_call_payload_mismatch_09.ml.infer.expected
File "0841_polyvar_call_payload_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0841_polyvar_call_payload_mismatch_09 is not a valid module name.

File "0841_polyvar_call_payload_mismatch_09.ml", line 4, characters 22-26:
4 | let _ = read_iota (`A true)
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
