compiler/typ/tests/fixtures/diagnostics/0841_polyvar_call_payload_mismatch_09.ml
let read_iota : [ `A of int ] -> int = function
  | `A x -> x

let _ = read_iota (`A true)
